unpackaged/main/default/objects/Derogation_Exception__c/Derogation_Exception__c.object-meta.xml
<CustomObject>
    <label>Derogation/Exception</label>
    <nameField>
        <displayFormat>D/E-{0000}</displayFormat>
        <label>Derrogation/Exception Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Derogations/Exceptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>