unpackaged/main/default/objects/Derogation_Exception__c/fields/Conditions_of_Derogration_Exception__c.field-meta.xml
<CustomField>
    <fullName>Conditions_of_Derogration_Exception__c</fullName>
    <label>Conditions of Derogration/Exception</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>