unpackaged/main/default/objects/Derogation_Exception__c/fields/Derogation_Exception__c.field-meta.xml
<CustomField>
    <fullName>Derogation_Exception__c</fullName>
    <label>Derogation/Exception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Derogation</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>