unpackaged/main/default/objects/Derogation_Exception__c/fields/Granted_by__c.field-meta.xml
<CustomField>
    <fullName>Granted_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Granted by Certifier</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Derogations_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>