unpackaged/main/default/objects/Derogation_Exception__c/fields/Granted_Date__c.field-meta.xml
<CustomField>
    <fullName>Granted_Date__c</fullName>
    <label>Granted Date</label>
    <type>Date</type>
</CustomField>