unpackaged/main/default/objects/Derogation_Exception__c/fields/Reason_for_Derogation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Derogation__c</fullName>
    <label>Reason for Derogation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>