unpackaged/main/default/objects/Derogation_Exception__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site/Head Office</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Derogation/Exception can only be requested for Site.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Derogations/Exceptions</relationshipLabel>
    <relationshipName>Derogations_Exceptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>