unpackaged/main/default/objects/Derogation_Exception__c/fields/Standard_number__c.field-meta.xml
<CustomField>
    <fullName>Standard_number__c</fullName>
    <label>Standard number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>