unpackaged/main/default/objects/Derogation_Exception__c/fields/Standard_Text__c.field-meta.xml
<CustomField>
    <fullName>Standard_Text__c</fullName>
    <label>Standard Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>