unpackaged/main/default/objects/Derogation_Exception__c/validationRules/Approver_Required_for_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver_Required_for_Approval</fullName>
    <active>true</active>
    <description>Cannot Update Stage to Approved if no user is populated in the Granted By field and no date is populated in Granted Date field.</description>
    <errorConditionFormula>IF(
				AND(
								OR(
												ISBLANK(Granted_by__c),
								    ISBLANK(Granted_Date__c)
								),
								TEXT(Stage__c) = &#39;Approved&#39;
				),  
				true, 
				false)</errorConditionFormula>
    <errorMessage>Cannot Update Stage to Approved if no user is populated in the Granted By field and no date is populated in Granted Date field.</errorMessage>
</ValidationRule>