unpackaged/main/default/objects/Derogation_Exception__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Conditions_of_Derogration_Exception__c</columns>
    <columns>Derogation_Exception__c</columns>
    <columns>Granted_by__c</columns>
    <columns>Standard_number__c</columns>
    <columns>Standard_Text__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>10/5/2022 12:00 AM</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <group>Membership_Services</group>
    </sharedTo>
</ListView>